# ps2-network

./: .gitignore  LICENSE  README.md
client/: README.md
client/@types/athena-env/: font.d.ts  request.d.ts  screen.d.ts  system.d.ts
client/src/: main.ts  menu.ts  ps2n-client.ts  ui.ts
scripts/: setup_ps2_smb.sh
server/: Cargo.toml  Dockerfile  README.md  build.rs  container.sh  run.sh
server/src/: app.rs  filesystem.rs  game_download_provider.rs  handler.rs  lib.rs  main.rs
server/src/common/: config.rs  http_client.rs
server/src/core/: art_provider.rs  database.rs  download_provider.rs  filesystem.rs  game_download_provider.rs  mod.rs  queue.rs
server/src/core/art_provider/: internet_archive.rs
server/src/core/download_provider/: crocdb.rs
server/src/core/filesystem/: directory.rs
server/src/core/game_download_provider/: crocdb.rs
server/src/filesystem/: directory.rs  errors.rs
server/src/game_download_provider/: crocdb.rs
server/src/handler/: add_download_to_queue.rs  download.rs  list_downloads.rs  list_downloads_on_queue.rs  list_games.rs  process_download_on_queue.rs
