[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
async-trait = "0.1.88"
cdfs = "0.2.3"
futures-util = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zip-extract = "0.3.0"
