[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
cdfs = "0.2.3"
futures-util = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
zip-extract = "0.3.0"
